<resources>
    <string name="app_name">Assignment 2 Grade Calculator</string>

    <string name="group_heading">Group Members:</string>

    <string name="member_one">Javier Navarro</string>
    <string name="email_one">navar423@csusm.edu</string>

    <string name="member_two">Branden Bennett</string>
    <string name="email_two">benne125@csusm.edu</string>

    <string name="member_three">Kostya Bratukhin</string>
    <string name="email_three">bratu001@csusm.edu</string>

    <string name="group_picture_description">Group Picture</string>

    <string name="calculator_heading">Grade Calculator:</string>
    <string name="score">Enter a score from 0 to 100</string>
    <string name="show_grade">Show Grade</string>
    <string name="results">Your grade</string>

    <string name="empty_score">Please enter a score.</string>
    <string name="invalid_Number">Please enter a valid number.</string>
    <string name="invalid_Range">Score must be between 0 and 100.</string>
    <string name="grade_result">You got an %1$s grade.</string>

    <string name="grade_A">A</string>
    <string name="grade_A_minus">A-</string>
    <string name="grade_B_plus">B+-</string>
    <string name="grade_B">B</string>
    <string name="grade_B_minus">B-</string>
    <string name="grade_C_plus">C+-</string>
    <string name="grade_C">C</string>
    <string name="grade_C_minus">C-</string>
    <string name="grade_F">F</string>
</resources>